--- a/app/js/app/partials/license.html
+++ b/app/js/app/partials/license.html
@@ -18,7 +18,7 @@
             <span>Full source code</span><a class="info" href="javascript:void(0)"><span class="icon-info-circle"></span></a>
             <div class="info-tip">
               <h4>Github</h4>
-              <div>All of the OPengine source code is available on Github: <a href="http://www.github.com/TeamOPifex/OPengine">http://www.github.com/TeamOPifex/OPengine</a></div>
+              <div>All of the OPengine source code is available on Github: <a onclick="return externalLink(this);" data-href="http://www.github.com/TeamOPifex/OPengine">http://www.github.com/TeamOPifex/OPengine</a></div>
             </div>
           </li>
           <li><span>Distribute to all platforms</span><a class="info" href="javascript:void(0)"><span class="icon-info-circle"></span></a>
