--- a/app/js/app/partials/engineDetail.html
+++ b/app/js/app/partials/engineDetail.html
@@ -13,7 +13,7 @@
                   <span class="sr-only">Toggle Dropdown</span>
                 </a>
                 <ul class="dropdown-menu">
-                  <li style=""><div style="margin: 5px;color: #666; font-size: 8px; padding: 0px; margin-bottom: 0px;">with</div></li>
+                  <li style=""><div class="with">with</div></li>
                   <li><a href="" ng-if="windows" ng-click="openSLN()">
                     <img src="content/imgs/Visual_Studio_logo.png" style="width: 24px;" /> Visual Studio</a></li>
                   <li><a href="" ng-click="openWith('sublime')">
