Project Helper and start of DirectX 11

--- a/app/js/app/partials/engineDetail.html
+++ b/app/js/app/partials/engineDetail.html
@@ -64,6 +64,7 @@
               </a>
               <ul class="dropdown-menu">
                 <li><a ng-click="editor()" href="javascript:void();">Scene Editor</a></li>
+                <li><a ng-click="helperTool()" href="javascript:void();">Helper Tool</a></li>
               </ul>
             </div>
             <a ng-click="toggleCode()" href="javascript:void();" class="btn btn-primary"><span class="icon-equalizer"></span> Build Options</a>
