--- a/app/js/app/partials/projectDetail.html
+++ b/app/js/app/partials/projectDetail.html
@@ -50,6 +50,7 @@
                       </a>
                       <ul class="dropdown-menu">
                         <li><a ng-click="editor()" href="javascript:void();">Scene Editor</a></li>
+                        <li><a ng-click="helperTool()" href="javascript:void();">Helper Tool</a></li>
                       </ul>
                     </div>
 
