--- a/app/js/app/partials/news.html
+++ b/app/js/app/partials/news.html
@@ -3,10 +3,20 @@
         <h2 class="title">
 			News
         </h2>
-		<div>
+		<div style="margin: 15px;">
+			<h4>OPengine v0.6 released!</h4>
+			<p>The login flow has been cleaned up. Along with a hardening of most parts of the app.</p>
+			<div>01/17/2016</div>
+      <hr />
+			<h4>v0.4 of the launcher is live</h4>
+			<p>The login flow has been cleaned up. Along with a hardening of most parts of the app.</p>
+			<div>01/17/2016</div>
+      <hr />
 			<h4>v0.2 of the launcher is live</h4>
 			<p>The login flow has been cleaned up. Along with a hardening of most parts of the app.</p>
 			<div>01/17/2016</div>
+      <hr />
 		</div>
+
 	</div>
 </div>
