--- a/app/js/app/partials/library.html
+++ b/app/js/app/partials/library.html
@@ -61,9 +61,9 @@
       </div> -->
 </div>
 
-<div class="tour">
+<!-- <div class="tour">
   <a id="tour" ng-click="tour()"><span class="icon-question"></span></a>
-</div>
+</div> -->
 
     <div id="newProjectModal" class="modal fade">
       <div class="modal-dialog">
