--- a/app/js/app/partials/shared/codeEditor.html
+++ b/app/js/app/partials/shared/codeEditor.html
@@ -56,8 +56,11 @@
 		<div style="height: 100%;overflow: auto;" ng-show="showCode && showFileType == 2"><img id="imagePreview" style="max-width: 100%;"></img></div>
 		<div style="height: 100%;" ng-show="showCode && showFileType == 1">
 			<div id="editor" style="height: 100%; min-height: 200px; text-align: left; ">//Welcome to the OPengine editor.</div>
-			<div id="newfile" style="position: absolute; top: 0; left: 42px; width: 300px; z-index: 10;" ng-class="{ hidden: !showNewFile }">
+			<div id="newfile" style="position: absolute; top: 50px; left: 42px; width: 300px; z-index: 1000;" ng-class="{ hidden: !showNewFile }">
 				<input id="newFileText" type="text" on-escape="cancelFile();" on-enter="newFile();" placeholder="New File..." ng-model="newFileName" class="form-control" />
+			</div>
+			<div id="newfolder" style="position: absolute; top: 50px; left: 42px; width: 300px; z-index: 1000;" ng-class="{ hidden: !showNewFolder }">
+				<input id="newFolderText" type="text" on-escape="cancelFolder();" on-enter="newFolder();" placeholder="New Folder..." ng-model="newFolderName" class="form-control" />
 			</div>
 		</div>
 	</div>
