--- a/app/js/app/partials/tools.html
+++ b/app/js/app/partials/tools.html
@@ -1,14 +1,16 @@
-<ul>
-    <li>
-        <a href="#/tools/spriteSheet">OPspriteSheet Creator</a>
-    </li>
-    <li>
-        <a href="#/tools/font">Font Creator</a>
-    </li>
-    <li>
-        <a href="#/tools/opm">FBX to OPM</a>
-    </li>
-    <li>
-        <a href="#/toolsResourcePack">Resource Pack</a>
-    </li>
-</ul>
+<br /><br />
+<p>These are web interface tools for creating common OPengine assets.</p>
+<div class="row">
+<div class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
+  <a style="margin:15px; padding: 15px; border: 3px solid #fff; border-radius: 3px; display: block;" href="#/tools/spriteSheet">OPspriteSheet Creator (.opss)</a>
+</div>
+<div class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
+  <a style="margin:15px; padding: 15px; border: 3px solid #fff; border-radius: 3px; display: block;" href="#/tools/font">Font Creator (.opf)</a>
+</div>
+<div class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
+  <a style="margin:15px; padding: 15px; border: 3px solid #fff; border-radius: 3px; display: block;" href="#/tools/opm">FBX Convert (.opm)</a>
+</div>
+<div class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
+  <a style="margin:15px; padding: 15px; border: 3px solid #fff; border-radius: 3px; display: block;" href="#/toolsResourcePack">Resource Packer (.opr)</a>
+</div>
+</div>
