Prep for marketplace changes

--- a/app/stylesheets/main.less
+++ b/app/stylesheets/main.less
@@ -2132,23 +2132,25 @@ body.main {
     border: 2px solid #fff;
     padding: 10px;
     margin: 10px;
-    width: 200px;
     height: 100px;
-    display: inline-block;
+    display: block;
     position: relative;
     cursor: pointer;
     background-color: @secondary-color;
 
     .addon-title {
         font-size: 16px;
+        color: #fff;
     }
     .addon-installed {
       color: @active-color;
     }
     .addon-category {
         font-size: 10px;
+        color: #fff;
     }
     .addon-author {
+        color: #fff;
         font-size: 10px;
         position: absolute;
         bottom: 5px;
