--- a/app/js/app/partials/marketplace.html
+++ b/app/js/app/partials/marketplace.html
@@ -4,12 +4,15 @@
         <h2 class="title">
           Addons
         </h2>
-        <div>
-          <div class="addon" ng-repeat="addon in addons" ng-click="install(addon)">
-            <div class="addon-title">{{addon.name}}</div>
-            <div class="addon-category">{{addon.category}}</div>
-            <div class="addon-installed" ng-if="addon.installed">{{addon.installedVersion}} Installed</div>
-            <div class="addon-author">{{addon.author}}</div>
+
+        <div class="row">
+          <div class="col-sm-4" ng-repeat="addon in addons">
+            <a class="addon" href="#/marketplace/addon/{{addon.name}}">
+              <div class="addon-title">{{addon.name}}</div>
+              <div class="addon-category">{{addon.category}}</div>
+              <div class="addon-installed" ng-if="addon.installed">{{addon.installedVersion}} Installed</div>
+              <div class="addon-author">{{addon.author}}</div>
+            </a>
           </div>
         </div>
 	</div>
