start of addon improvements

--- a/app/js/app/partials/marketplace.html
+++ b/app/js/app/partials/marketplace.html
@@ -15,5 +15,9 @@
             </a>
           </div>
         </div>
+
+        <div>
+            <a href="#/marketplace/new" class="btn btn-lg btn-default">Create an Addon</a>
+        </div>
 	</div>
 </div>
