Tweaking the games section

--- a/app/stylesheets/main.less
+++ b/app/stylesheets/main.less
@@ -2428,3 +2428,20 @@ a.small-link {
 .loading-icon.active {
   display: block;
 }
+
+a.game {
+    display: block;
+    border: 3px solid white;
+    border-radius: 1px;
+    height: 150px;
+    background-size: cover;
+    margin: 20px;
+    h1 {
+        padding-top: 35px;
+    }
+}
+
+.game.header {
+    height: 500px;
+    border: 1px solid white;
+}
