--- a/app/js/app/partials/games.html
+++ b/app/js/app/partials/games.html
@@ -1,8 +1,53 @@
-<h1>Set in Stone</h1>
-<p>A game for kids and parents, with cooperative play, and about a fantasy world full of danger.</p>
-<br />
-<img src="http://i.imgur.com/3bBXgz3.png" />
-<br />
-<br />
-<p>Want to get involved?</p>
-<a class="btn btn-default btn-lg" href="mailto:garrett@teamopifex.com"><span class="icon-envelope"></span>&nbsp;&nbsp;Email Us</a>
+<p>
+    <br />
+    <i>Games made with the OPengine</i>
+</p>
+<div class="row">
+    <div class="col-md-8 col-md-offset-2">
+        <a href="#/games/SetInStone" class="game featured" style="background-image: url(content/imgs/SetInStoneHeader.png);">
+            <h1>Set in Stone</h1>
+        </a>
+    </div>
+</div>
+<div class="row">
+    <div class="col-md-4">
+        <a class="game">
+            <h1>Don't get eaten</h1>
+        </a>
+    </div>
+    <div class="col-md-4">
+        <a class="game">
+            <h1>Shapeshift</h1>
+        </a>
+    </div>
+    <div class="col-md-4">
+        <a class="game">
+            <h1>Degree</h1>
+        </a>
+    </div>
+    <div class="col-md-4">
+        <a class="game">
+            <h1>S</h1>
+        </a>
+    </div>
+    <div class="col-md-4">
+        <a class="game">
+            <h1>TAGjam 13</h1>
+        </a>
+    </div>
+    <div class="col-md-4">
+        <a class="game">
+            <h1>TAGjam 10</h1>
+        </a>
+    </div>
+    <div class="col-md-4">
+        <a class="game">
+            <h1>Beneath the Surface</h1>
+        </a>
+    </div>
+    <div class="col-md-4">
+        <a class="game">
+            <h1>Splat!</h1>
+        </a>
+    </div>
+</div>
