Organise models by folder

--- a/app/stylesheets/main.less
+++ b/app/stylesheets/main.less
@@ -2445,3 +2445,12 @@ a.game {
     height: 500px;
     border: 1px solid white;
 }
+
+.Model.Folder {
+  background-color: #393;
+}
+.Model.Back {
+  width: 260px;
+  height: 32px;
+  margin-bottom: 0px;
+}
