--- a/app/js/app/partials/newAddon.html
+++ b/app/js/app/partials/newAddon.html
@@ -1,6 +1,6 @@
 <div class="row extrapadding section detail">
-    <div class="col-xs-12 text-left">
-        <div>
+    <div class="col-xs-8 text-left">
+        <div ng-if="files.length == 0">
             <a ng-click="folder()" href="javascript:void(0);" class="btn btn-lg btn-default">
                 Select Folder
             </a>
@@ -11,41 +11,120 @@
         </div>
         <br />
         <div class="row">
-            <div class="col-xs-6">
-                <div>Select Files</div>
-                <div class="fileSelection" style="width: 100%;">
-                    <div ng-repeat="file in files">
+            <div class="col-xs-12">
+                <div class="fileSelection" style="width: 100%; height: 300px; overflow-y: scroll;">
+                  <table class="table">
+                    <tr ng-repeat="file in files" ng-if="file.selected">
+                      <td>
+                        <label class="text">{{file.name}}</label>
+                      </td>
+                      <td>
                         <div class="checkbox">
                             <input ng-model="file.selected" type="checkbox" id="file_{{file.id}}" />
                             <label class="check" for="file_{{file.id}}"></label>
-                            <label class="text">{{file.name}}</label>
                         </div>
-                    </div>
+                      </td>
+                    </tr>
+                    <tr ng-repeat="file in files" ng-if="!file.selected">
+                      <td>
+                        <label class="text">{{file.name}}</label>
+                      </td>
+                      <td>
+                        <div class="checkbox">
+                            <input ng-model="file.selected" type="checkbox" id="file_{{file.id}}" />
+                            <label class="check" for="file_{{file.id}}"></label>
+                        </div>
+                      </td>
+                    </tr>
+                  </table>
                 </div>
-            </div>
-            <div class="col-xs-6">
-                Select Options
             </div>
         </div>
         <br />
 
-        <a ng-click="addBinary()" href="javascript:void(0);" class="btn btn-lg btn-default">
-            Add Binary
-        </a>
+        <div class="row">
+          <div ng-class="{ 'col-xs-4': selectedOS == 'Windows', 'col-xs-6': selectedOS != 'Windows'}">
+            <div class="styled-select">
+              <select class="form-control" ng-model="selectedOS">
+                <option ng-repeat="opt in osOptions" value="{{opt.name}}">{{opt.name}}</option>
+              </select>
+            </div>
+          </div>
+          <div class="col-xs-4" ng-show="selectedOS == 'Windows'">
+            <div class="styled-select">
+              <select class="form-control" ng-model="selectedVS">
+                <option ng-repeat="opt in vsOptions" value="{{opt.name}}">{{opt.name}}</option>
+              </select>
+            </div>
+          </div>
+          <div ng-class="{ 'col-xs-4': selectedOS == 'Windows', 'col-xs-6': selectedOS != 'Windows'}">
+            <a style="width: 100%" ng-click="addBinary()" href="javascript:void(0);" class="btn btn-lg btn-default">
+                Add Package
+            </a>
+          </div>
+        </div>
         <br />
         <div class="row">
             <div class="col-xs-12">
                 <div ng-repeat="binary in binaries">
                     <div>
-                        Binary
+                        <h1 ng-if="binary.vs">{{binary.vs}} Package</h1>
+                        <h1 ng-if="!binary.vs">{{binary.os}} Package</h1>
                     </div>
                     <div>
-                        <a ng-click="binaryFiles(binary)" href="javascript:void(0);" class="btn btn-lg btn-default">
-                            Select files...
-                        </a>
+                        <div class="fileSelection" style="width: 100%; height: 300px; overflow-y: scroll;">
+                          <table class="table">
+                            <tr ng-repeat="file in binary.files" ng-if="file.selected">
+                              <td>
+                                <label class="text">{{file.name}}</label>
+                              </td>
+                              <td>
+                                <div class="checkbox">
+                                    <input ng-model="file.selected" type="checkbox" id="file_{{file.id}}" />
+                                    <label class="check" for="file_{{file.id}}"></label>
+                                </div>
+                              </td>
+                            </tr>
+                            <tr ng-repeat="file in binary.files" ng-if="!file.selected">
+                              <td>
+                                <label class="text">{{file.name}}</label>
+                              </td>
+                              <td>
+                                <div class="checkbox">
+                                    <input ng-model="file.selected" type="checkbox" id="file_{{file.id}}" />
+                                    <label class="check" for="file_{{file.id}}"></label>
+                                </div>
+                              </td>
+                            </tr>
+                          </table>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
+    </div>
+    <div class="col-xs-4 text-left" style="border-left: 1px solid #ccc">
+      <br />
+      <div class="row">
+        <div class="col-xs-4">
+          <img src="#" />
+        </div>
+        <div class="col-xs-8">
+          <div><input placeholder="Addon Name" class="form-control" type="text" ng-model="addon" /></div>
+          <div><input placeholder="0.0.0" class="form-control" type="text" ng-model="version" /></div>
+        </div>
+      </div>
+      <br />
+      <div class="row">
+        <div class="col-xs-12">
+          <textarea placeholder="Description" class="form-control" ng-model="description"></textarea>
+        </div>
+        <div class="col-xs-12">
+          <h3>Images</h3>
+        </div>
+        <div class="col-xs-12">
+          <a href="javascript:void(0)" class="btn btn-primary form-control">Create</a>
+        </div>
+      </div>
     </div>
 </div>
