--- a/app/js/app/partials/projectDetail.html
+++ b/app/js/app/partials/projectDetail.html
@@ -51,6 +51,7 @@
                       <ul class="dropdown-menu">
                         <li><a ng-click="editor()" href="javascript:void();">Scene Editor</a></li>
                         <li><a ng-click="helperTool()" href="javascript:void();">Helper Tool</a></li>
+                        <li><a ng-click="convertTool()" href="javascript:void();">Convert Tool</a></li>
                       </ul>
                     </div>
 
