--- a/app/js/app/partials/library.html
+++ b/app/js/app/partials/library.html
@@ -65,25 +65,42 @@
   <a id="tour" ng-click="tour()"><span class="icon-question"></span></a>
 </div> -->
 
-    <div id="newProjectModal" class="modal fade">
-      <div class="modal-dialog">
-        <div class="modal-content">
-          <div class="modal-header">
-            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-            <h4 class="modal-title">New Project</h4>
-          </div>
-          <div class="modal-body text-left">
-               <input type="text" ng-model="newProject.RepoName" placeholder="Project Name..." class="form-control" />
-               <h5>Or</h5>
-               <a href="javascript:void(0)" ng-click="ExistingProject()"><span class="icon-folder"></span> From Existing...</a>
-          </div>
-          <div class="modal-footer">
-            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-            <button type="button" class="btn btn-primary" ng-click="CreateNewProject()">Create Project</button>
-          </div>
-        </div><!-- /.modal-content -->
-      </div><!-- /.modal-dialog -->
-    </div><!-- /.modal -->
+<div id="newProjectModal" class="modal modal-large fade">
+  <div class="modal-dialog">
+    <div class="modal-content">
+        <ul class="nav nav-tabs">
+          <li id="templates" role="presentation" class="active" ng-click="tab('templates')"><a href="javascript:void(0)">Template</a></li>
+          <li id="existing" role="presentation" ng-click="tab('existing')"><a href="javascript:void(0)">Existing</a></li>
+          <li id="repo" role="presentation" ng-click="tab('repo')"><a href="javascript:void(0)">Repo</a></li>
+        </ul>
+        <div class="modal-body text-left tab tab-templates">
+            <div class="row">
+                <div class="col-xs-8">
+                    Tempalte list
+                </div>
+                <div class="col-xs-4">
+                    Desc
+                </div>
+            </div>
+            <input type="text" ng-model="newProject.RepoName" placeholder="Project Name..." class="form-control" />
+            <h5>Or</h5>
+            <a href="javascript:void(0)" ng-click="ExistingProject()"><span class="icon-folder"></span> From Existing...</a>
+        </div>
+        <div class="modal-body text-left tab tab-existing" style="display:none">
+            <span>existing</span>
+        </div>
+        <div class="modal-body text-left tab tab-repo" style="display:none">
+            <input type="text" ng-model="newProject.RepoName" placeholder="Project Name..." class="form-control" />
+            <h5>Or</h5>
+            <a href="javascript:void(0)" ng-click="ExistingProject()"><span class="icon-folder"></span> From Existing...</a>
+        </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary" ng-click="CreateNewProject()">Create Project</button>
+      </div>
+    </div><!-- /.modal-content -->
+  </div><!-- /.modal-dialog -->
+</div><!-- /.modal -->
 
 
 
