--- a/app/js/app/partials/library.html
+++ b/app/js/app/partials/library.html
@@ -65,7 +65,7 @@
   <a id="tour" ng-click="tour()"><span class="icon-question"></span></a>
 </div> -->
 
-<div id="newProjectModal" class="modal modal-large fade">
+<div id="newProjectModal" class="modal modal-large fade" style="position: absolute;">
   <div class="modal-dialog">
     <div class="modal-content">
         <ul class="nav nav-tabs">
@@ -73,31 +73,49 @@
           <li id="existing" role="presentation" ng-click="tab('existing')"><a href="javascript:void(0)">Existing</a></li>
           <li id="repo" role="presentation" ng-click="tab('repo')"><a href="javascript:void(0)">Repo</a></li>
         </ul>
-        <div class="modal-body text-left tab tab-templates">
-            <div class="row">
+        <div class="modal-body text-left tab tab-templates library" style="padding: 0px;">
+            <div style="padding: 0px 15px;">
+              <div class="row">
+                  <div class="col-xs-8" style="padding-right: 0px;">
+                    <div style="height: 500px; overflow-y: scroll; display:block;">
+                        <div class="engine-version" ng-repeat="temp in templates">
+                            <a href="javascript:void(0);" ng-click="templateSelect(temp)" ng-class="{ active: templateSelected.id == temp.id }">
+                              <div class="overlay-background"></div>
+                              <div class="overlay"></div>
+                              <div class="overlay-content">
+                                  <span>{{temp.name}}</span>
+                              </div>
+                            </a>
+                        </div>
+                    </div>
+                  </div>
+                  <div class="col-xs-4" style="padding-left: 0px; padding-right: 0px;">
+                    <div style="overflow-y: scroll; display:block;height: 500px;">
+                      <div style="padding: 10px;">
+                        <div ng-bind-html="templateSelected.desc"></div>
+                      </div>
+                    </div>
+                  </div>
+              </div>
+            </div>
+            <div class="modal-footer">
+              <div class="row">
                 <div class="col-xs-8">
-                    Tempalte list
+                  <input class="form-control" placeholder="Project Name..." type="text" ng-model="newProject.RepoName" />
                 </div>
                 <div class="col-xs-4">
-                    Desc
+                  <button type="button" class="btn btn-primary form-control" ng-click="CreateNewProject()">Create Project</button>
                 </div>
+              </div>
             </div>
-            <input type="text" ng-model="newProject.RepoName" placeholder="Project Name..." class="form-control" />
-            <h5>Or</h5>
-            <a href="javascript:void(0)" ng-click="ExistingProject()"><span class="icon-folder"></span> From Existing...</a>
         </div>
         <div class="modal-body text-left tab tab-existing" style="display:none">
-            <span>existing</span>
+          <a href="javascript:void(0)" ng-click="ExistingProject()"><span class="icon-folder"></span> From Existing...</a>
         </div>
         <div class="modal-body text-left tab tab-repo" style="display:none">
             <input type="text" ng-model="newProject.RepoName" placeholder="Project Name..." class="form-control" />
-            <h5>Or</h5>
-            <a href="javascript:void(0)" ng-click="ExistingProject()"><span class="icon-folder"></span> From Existing...</a>
+            <input type="text" ng-model="newProject.RepoName" placeholder="Git URL..." class="form-control" />
         </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary" ng-click="CreateNewProject()">Create Project</button>
-      </div>
     </div><!-- /.modal-content -->
   </div><!-- /.modal-dialog -->
 </div><!-- /.modal -->
