changes to licensing

--- a/app/js/app/partials/license.html
+++ b/app/js/app/partials/license.html
@@ -67,8 +67,8 @@
           <li><span class="icon-check-circle-o"></span></li>
           <li><span class="icon-check-circle-o"></span></li>
           <li><span class="icon-check-circle-o"></span></li>
-          <li><span class="icon-close"></span></li>
-          <li><span class="icon-close"></span></li>
+          <li><span class="icon-check-circle-o"></span></li>
+          <li><span class="icon-check-circle-o"></span></li>
           <li><span class="icon-close"></span></li>
           <li><span class="icon-close"></span></li>
         </ul>
@@ -151,17 +151,22 @@
 <div class="text-left" style="width: 800px; margin: 0 auto;">
   <h1 id="faq">FAQ</h1>
   <h3>When do I need to have a subscription?</h3>
-  <p>Only when you're actively selling your game/application. Even if you're making a game that you plan to sell, you don't have to have to a subscription until it's being sold.</p>
-  <p>However, there are perks to having an active subscription whether you sell your game or not and we greatly appreciate the support.</p>
-  <h3>Do I need a subscription per game?</h3>
-  <p>Nope. You only need one active subscription per person or per organization. Make and sell as many games as you want.</p>
+  <p>Never. However, there are perks to having an active subscription, like access to select OPifex games source code, you'll help us keep the lights on, and eventually more perks like monthly royalty free assets of textures, models, music, etc.</p>
   <h3>Can I make changes to the OPengine?</h3>
-  <p>Absolutely. Change it to your hearts content. Make a pull request and we'll get your changes merged into the main branch. Or keep the changes to yourself.</p>
-  <p>The only stipulation is you can't resell/redistribute the modified OPengine outside of your organization.</p>
+  <p>Absolutely. Change it to your hearts content. Make a pull request and we&apos;ll get your changes merged into the main branch. Or keep the changes to yourself.</p>
+  <p>The only stipulation is you can&apos;t resell/redistribute the modified OPengine outside of your organization.</p>
+  <h3>Can I become a sponsor?</h3>
+  <p>
+      <span> Lets talk! Please contact us at </span>
+      <a href='mailto:sponsor@teamopifex.com'>sponsor@teamopifex.com</a>
+  </p>
   <h3>Will the subscription price increase?</h3>
-  <p>As the OPengine improves over time there will likely be a price increase, however your monthly rate will be fixed at the time you begin your subscription. We still retain the right to change the pricing cost and/or pricing model at a future date and time.</p>
+  <p>As the OPengine improves over time there could be, however your monthly rate will be fixed at the time you begin your subscription and it'll always be affordable. We still retain the right to change the pricing cost and/or pricing model at a future date and time.</p>
   <h3>Can I purchase full rights to the OPengine source code?</h3>
-  <p>Please contact us at <a href="mailto:licensing@teamopifex.com">licensing@teamopifex.com</a></p>
+  <p>
+      <span>Please contact us at </span>
+      <a href="mailto:licensing@teamopifex.com">licensing@teamopifex.com</a>
+  </p>
 </div>
 
 <br />
