fixing the links...

--- a/app/js/app/partials/engineDetail.html
+++ b/app/js/app/partials/engineDetail.html
@@ -89,8 +89,8 @@
         				</div>
         				<div class="col-xs-3 text-right">
         						<a href="" ng-click="toggleConsole()"><span class="icon-terminal"></a>
-        						<a href="#/bug"><span class="icon-bug"></a>
-        						<a href="#/message"><span class="icon-message-2"></a>
+        						<a href="#!/bug"><span class="icon-bug"></a>
+        						<a href="#!/message"><span class="icon-message-2"></a>
 
         						<a href="" id="toggle-menu" class="navbar-toggle" onclick="$('#bs-navbar').toggle();">
         								<span class="sr-only">Toggle navigation</span>
