--- a/app/js/app/partials/library.html
+++ b/app/js/app/partials/library.html
@@ -9,7 +9,7 @@
           </div>
             <div>
             	<div class="engine-version" ng-repeat="engine in engineVersions">
-                  <a href="#/library/engine/{{engine.id}}">
+                  <a href="#!/library/engine/{{engine.id}}">
                     <div class="overlay-background"></div>
                     <div class="overlay"></div>
                     <div class="overlay-content">
@@ -34,7 +34,7 @@
             <h2 class="title"> My Projects </h2>
             <div>
             	<div class="engine-version" ng-repeat="project in projects track by project.id">
-                    <a href="#/library/project/{{project.id}}">
+                    <a href="#!/library/project/{{project.id}}">
                       <div class="overlay-background" style="background-image: url('{{project.bg}}')"></div>
                       <div class="overlay"></div>
                       <div class="overlay-content">
