License things, and cleanup

--- a/app/js/app/partials/projectDetail.html
+++ b/app/js/app/partials/projectDetail.html
@@ -198,7 +198,7 @@
                 <span ng-if="changes > 0" href="javascript:void(0);" class="btn btn-primary">Commits Behind ({{changes}})</span>
 
                 <small style="float:right; padding-top: 8px;">
-                    <a href="#!/project/settings/{{name}}">
+                    <a href="#/project/settings/{{name}}">
                         <span class="icon-gear"></span>
                     </a>
                 </small>
