fixing more links

--- a/app/js/app/partials/account.html
+++ b/app/js/app/partials/account.html
@@ -1,4 +1,4 @@
-<div style="text-align:left; height: 100%; overflow: scroll-y; display:block; padding: 30px;">
+﻿<div style="text-align:left; height: 100%; overflow: scroll-y; display:block; padding: 30px;">
 
   <div style="max-width: 900px">
     <div class="row">
@@ -15,7 +15,7 @@
 
         <h3>Subscription: <span ng-if="!user.subscription">personal</span><span ng-if="user.subscription">{{user.subscription}}</span></h3>
         <div ng-if="!user.subscription">
-          <a href="#/license">Get an OPengine subscription</a> and start selling your games.
+          <a href="#!/license">Get an OPengine subscription</a> and start selling your games.
           <div><i>Note that you do not need an active subscription unless you're selling your games.</i></div>
         </div>
         <div ng-if="subscription != null">
