--- a/app/js/app/partials/games.html
+++ b/app/js/app/partials/games.html
@@ -1,10 +1,10 @@
-<p>
+﻿<p>
     <br />
     <i>Games made with the OPengine</i>
 </p>
 <div class="row">
     <div class="col-md-8 col-md-offset-2">
-        <a href="#/games/SetInStone" class="game featured" style="background-image: url(content/imgs/SetInStoneHeader.png);">
+        <a href="#!/games/SetInStone" class="game featured" style="background-image: url(content/imgs/SetInStoneHeader.png);">
             <h1>Set in Stone</h1>
         </a>
     </div>
