--- a/app/js/app/partials/license.html
+++ b/app/js/app/partials/license.html
@@ -1,4 +1,4 @@
-<script type="text/javascript" src="https://js.stripe.com/v2/"></script>
+﻿<script type="text/javascript" src="https://js.stripe.com/v2/"></script>
 
 <div style="height: 100%; overflow: scroll-y; display:block; padding: 10px;">
   <h1> OPengine Subscription </h1>
@@ -29,7 +29,7 @@
           <li><span class="icon-slack"></span> Slack Access<a class="info" href="javascript:void(0)"><span class="icon-info-circle"></span></a>
           <div class="info-tip">
             <h4>Slack Channel</h4>
-            <div>The OPengine has a slack channel. <a href="#/slack">Join the <span class="icon-slack"></span> channel</a>.</div>
+            <div>The OPengine has a slack channel. <a href="#!/slack">Join the <span class="icon-slack"></span> channel</a>.</div>
           </div></li>
           <li><span class="icon-slack"></span> Slack OPengine Support Channel<a class="info" href="javascript:void(0)"><span class="icon-info-circle"></span></a>
           <div class="info-tip">
