--- a/app/js/app/partials/marketplace.html
+++ b/app/js/app/partials/marketplace.html
@@ -7,9 +7,11 @@
 
         <div class="row">
           <div class="col-sm-4" ng-repeat="addon in addons">
-            <a class="addon" href="#/marketplace/addon/{{addon.name}}">
-              <div class="addon-title">{{addon.name}}</div>
-              <div class="addon-category">{{addon.category}}</div>
+            <a class="addon" href="#/marketplace/addon/{{addon.id}}">
+              <div class="addon-title">{{addon.name}} | {{addon.id}}</div>
+              <div class="addon-category">
+                <span ng-repeat="addon in addon.category">#{{addon}} </span>
+              </div>
               <div class="addon-installed" ng-if="addon.installed">{{addon.installedVersion}} Installed</div>
               <div class="addon-author">{{addon.author}}</div>
             </a>
